--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "homepage": "https://github.com/EmilyAbrahart/plotify-backend#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.27",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "querystring": "^0.2.0",
+    "request": "^2.88.2"
   }
 }
